--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,103 @@
 Código Hexadecimal verde: #8EC641
 Código Hexadecimal gris footer: #3B3B3B
 */
+
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	font-family: 'Raleway'
+	font-size: 16px;
+}
+/*Seccion Bienvenida*/
+#bienvenida{
+	background: url('../img/fondo-bienvenida.jpg'); /*Imagen de fondo*/
+	background-size: cover;  /*cubrir toda la superficie del elemento*/
+	background-position: center; /*imagen centrada*/
+	padding: 50px 0; /*50px en top y bottom y opx en left y right*/
+}
+.logo{
+	text-align: left; /*alinear su contenido a la izquierda*/
+	padding: 0 30px; /*0px de padding en top y buttom 30px en left y right*/
+}
+
+.mensaje{
+	text-align: center; 
+}
+
+/*Secciones fondo de color - para darle el color de fondo a todas las secciones que tengan el backgorund verde */
+.color{
+	background-color: #8EC641;
+}
+
+/*Newsletter*/
+.newsletter {
+	text-align: center;  /*contenido centrado*/
+	padding: 50px;
+}
+
+.newletter button {
+	color: white;
+	background-color: #8EC641;
+	padding: 20px;
+	border: 5px solid white; /*borde blanco de 5px,*/
+	border-radius: 5px; /*curvamos las esquinas con border radius*/
+	font-size: 1.5em; /*agrandamos su tipografia*/
+	font-weight: bolder; /*tipografia gruesa*/
+	cursor: pointer; /*Cursor sera un pointer de links a pasar por encima del boton*/
+}
+/*Seccion about*/
+#about {
+	background: url('../img/fondo-about.jpg'); /*ñe ponemos la imagen de fondo de la misma manera que con la seccion bienvenida*/
+	background-size: cover;
+	background-position: center;
+	padding: 50px 0;
+}
+
+.contenido{
+	color:white;
+	width: 40%;   /*Un ancho del 40% en relacion con su contenedor en este caso su contenedor es about esto quiere decir que la caja contenido medira un 40% del ancho de la caja about*/
+	margin: 0 auto; /*que el margen top y de bottom de nuestra caja contenido tendra 0 px  y que en left y right tendran margen automatico, para poder ocupar esta propiedas, debemos tener un ancho definido para la caja en este 
+	aso el ancho es de 40%, esto dejara el mismo margen a 
+	la izquierda y a la derechao sea si nuestra caja ocupa un 40% del ancho de su contenedor ,
+	cada margenautomatico sera de 30% para asi hacer el 100% , se traduce imagen queda centrada*/
+	padding: 30px 30px 100px 30px; 
+}
+
+.contenido h1{
+	font-weight: bolder;
+	font-size: 5rem;
+	font-height: 5rem;
+	text-transform: uppercase;
+}
+/*Tipos de té*/
+.te-diferentes{
+	color:white;   
+	padding: 30px;
+	width: 60%;
+	margin: 0 auto;
+}
+
+.tipo-de-te{
+	border: 5px solid white; /*borde y letra blanca*/
+	margin: 30px 0;
+	padding: 20px;
+}
+
+.tipo.de-te h2 {
+	font-size: 1.5rem;
+}
+
+#disfruta {
+	background: url('../img/disfruta.jpg');
+	background-size: cover;
+	background-position: center;
+	padding: 50px 0; 
+}
+
+/*Footer*/
+.footer{
+	background-color: #3B3B3B; /*tendra un color gris de fondo*/
+	padding: 20px 30px /*padding de 20px en top y bottom y de 30px en left y right*/
+	color:white; /*texto color blanco*/
+}
